--- a/frontend-angular/Hood/src/index.html
+++ b/frontend-angular/Hood/src/index.html
@@ -7,8 +7,25 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link href="app-content/app.css" rel="stylesheet" />
 </head>
 <body>
+  <div class="container">
+    <div class="col-sm-8 col-sm-offset-2">
+      <div ng-class="{ 'alert': flash, 'alert-success': flash.type === 'success', 'alert-danger': flash.type === 'error' }" ng-if="flash" ng-bind="flash.message"></div>
+      <div ng-view></div>
+  </div>
+  </div>
   <app-root></app-root>
+  <script src="app.js"></script>
+  <script src="app-services/flash.service.js"></script>
+  <script src="app-services/user.service.js"></script>
+  <script src="app-services/register.service.js"></script>
+  <script src="app-services/login.service.js"></script>
+  <script src="home/home.controller.js"></script>
+  <script src="login/login.controller.js"></script>
+  <script src="register/register.controller.js"></script>
 </body>
 </html>
